<resources>
    <string name="mec_accept_terms">By placing the order, I accept Philips’</string>
    <string name="mec_accepted_codes">Accepted codes</string>
    <string name="mec_add">Add</string>
    <string name="mec_add_gift_Card">Add gift code</string>
    <string name="mec_add_gift_codes">Add gift codes</string>
    <string name="mec_add_new_address">Add a new shipping address</string>
    <string name="mec_add_payment_method">Add a new payment method</string>
    <string name="mec_add_to_cart">Add to cart</string>
    <string name="mec_add_wishlist">Add to wishlist</string>
    <string name="mec_address">Address</string>
    <string name="mec_address_error">Address must have characters with a mix of letters (A-Z, a-z), digits (0-9), symbols (\",\" ,\"-\", “.”)</string>
    <string name="mec_address_line_one">Address line 1</string>
    <string name="mec_address_line_one_hint">Enter address line 1</string>
    <string name="mec_address_line_two">Address line 2</string>
    <string name="mec_address_line_two_hint">(optional)</string>
    <string name="mec_anonymous">Anonymous</string>
    <string name="mec_apply">Apply</string>
    <string name="mec_authentication">Authentication</string>
    <string name="mec_back_shoppingCart">Back to Shopping cart</string>
    <string name="mec_bazaarVoice_Detail_at">Details at</string>
    <string name="mec_bazaarVoice_Terms_And_Condition">These reviews are managed by Bazaarvoice and comply with the Bazaarvoice Authenticity Policy, which is supported by anti-fraud technology and human analysis.</string>
    <string name="mec_billing_address">Billing address</string>
    <string name="mec_blank_cvv_error">Please enter a valid CVV</string>
    <string name="mec_buy_from_retailers">Buy From Retailer</string>
    <string name="mec_call">Call</string>
    <string name="mec_cancel">Cancel</string>
    <string name="mec_cancel_order">Cancel my order</string>
    <string name="mec_cancel_order_dls_for_your_ref_sg">For your reference, your order number is %s</string>
    <string name="mec_cancel_order_dls_msg">You can cancel your order before it is shipped. Our consumer care team can assist you with this.</string>
    <string name="mec_cancel_order_number">Cancel order number </string>
    <string name="mec_cancel_payment">Do you want to cancel the payment? Your cart will be empty.</string>
    <string name="mec_cancel_your_order">Cancel your order</string>
    <string name="mec_card_holder_first_name">Card Holder First name</string>
    <string name="mec_card_holder_last_name">Card Holder Last name</string>
    <string name="mec_cart_count_exceed_message">Cannot add more than %d products in Cart</string>
    <string name="mec_cart_login_error_message">Please Register or Login to easily order your products</string>
    <string name="mec_cart_out_of_stock_message">This product is temporarily out of stock. Please remove it from cart to shop further.</string>
    <string name="mec_cart_summary">Cart summary</string>
    <string name="mec_cart_tax_message">Price including %s VAT</string>
    <string name="mec_cart_total">Total</string>
    <string name="mec_check_internet_connection">Please check your Internet Connection.</string>
    <string name="mec_checkout">Checkout</string>
    <string name="mec_choose_address_text">Choose Shipping Address from below list</string>
    <string name="mec_confirmation">Confirmation</string>
    <string name="mec_confirmation_email_msg">You will receive a confirmation e-mail shortly at</string>
    <string name="mec_contact_details">Contact details</string>
    <string name="mec_contact_philips_consumer_care">Please contact Philips Consumer Care %s for further support.</string>
    <string name="mec_continue">Continue</string>
    <string name="mec_continue_checkout">Continue to checkout</string>
    <string name="mec_continue_shopping">Continue shopping</string>
    <string name="mec_country">Country</string>
    <string name="mec_country_error">Please enter a valid Country</string>
    <string name="mec_cvv_code">Please enter the CVV/CVC for </string>
    <string name="mec_cvvpopup_info">This is the 3 digit code on the back of your credit or debit card. Alternatively, if you have an American Express, it is the 4 digit number on the front of the card.</string>
    <string name="mec_delete">Delete</string>
    <string name="mec_delete_item_alert_message">Would you like to delete this shipping address?</string>
    <string name="mec_delete_product_confirmation_title">Would you like to delete this product from shopping cart?</string>
    <string name="mec_delete_voucher_confirmation_title">Would you like to remove this voucher from shopping cart?</string>
    <string name="mec_deliver_to_this_address">Deliver to this address</string>
    <string name="mec_delivery">Delivery</string>
    <string name="mec_delivery_method">Delivery Method</string>
    <string name="mec_discount">discount</string>
    <string name="mec_empty_cart">Your shopping cart is currently empty.</string>
    <string name="mec_empty_purchase_history">If you placed your order using this app, please check that you have received an order confirmation email.</string>
    <string name="mec_enter_code">Enter gift code</string>
    <string name="mec_faq">FAQ</string>
    <string name="mec_features">Features</string>
    <string name="mec_fetching_payment">Fetching Payment Details...</string>
    <string name="mec_first_name">First name</string>
    <string name="mec_first_name_error">Please enter a valid first name</string>
    <string name="mec_first_name_hint">Enter first name</string>
    <string name="mec_has_used_this_product_for">Has used this product for</string>
    <string name="mec_house_number">House number</string>
    <string name="mec_house_number_error">Please enter house number</string>
    <string name="mec_house_number_hint">Enter house number</string>
    <string name="mec_in_stock">In stock</string>
    <string name="mec_info">Info</string>
    <string name="mec_invalid_landing_view">Please provide a valid Landing View</string>
    <string name="mec_invalid_product_ctn">Please provide a non empty product CTN</string>
    <string name="mec_last_name">Last name</string>
    <string name="mec_last_name_error">Please enter a valid last name</string>
    <string name="mec_last_name_hint">Enter last name</string>
    <string name="mec_loading">Loading..</string>
    <string name="mec_manage_address">Manage Address</string>
    <string name="mec_more_info">for more info</string>
    <string name="mec_mr">Mr</string>
    <string name="mec_mrs">Ms</string>
    <string name="mec_my_orders">My orders</string>
    <string name="mec_new_card_text">New Card</string>
    <string name="mec_new_payment_disclaimer">This payment detail will be saved once you place an order</string>
    <string name="mec_no_address_select_message">Please select a Shipping Address</string>
    <string name="mec_no_delivery_mode_error_message">Please select a Delivery Mode</string>
    <string name="mec_no_internet">Your internet connection does not seem to be working. Please check and try again</string>
    <string name="mec_no_payment_error_message">Please select a Payment Method</string>
    <string name="mec_no_philips_shop">Philips shop is not available for the selected country, only retailer mode is available</string>
    <string name="mec_no_product_available">No product found in your Store.</string>
    <string name="mec_no_result">0 results found for</string>
    <string name="mec_no_review_available">No Reviews Found</string>
    <string name="mec_nothing_in_cart">Nothing in your cart</string>
    <string name="mec_ok">OK</string>
    <string name="mec_online_retailers">Online Retailers</string>
    <string name="mec_only">Only</string>
    <string name="mec_order_detail_unavailable">Order Detail is unavailable</string>
    <string name="mec_order_details">Order details</string>
    <string name="mec_order_not_received_items">Order not received</string>
    <string name="mec_order_number_msg">Order number: %s</string>
    <string name="mec_order_pay">Order and pay</string>
    <string name="mec_order_state">Your order is %s</string>
    <string name="mec_order_summary">Order Summary</string>
    <string name="mec_order_summary_shipping">Delivery information</string>
    <string name="mec_orders">Orders</string>
    <string name="mec_other_channel_purchase">If you placed your order using another retailer then your order may not show up here.</string>
    <string name="mec_out_of_stock">Out of stock</string>
    <string name="mec_page">page</string>
    <string name="mec_payment">Payment</string>
    <string name="mec_payment_failed_message">There was a problem processing your payment. Your account has not been charged. Please try again or choose another payment method.</string>
    <string name="mec_payment_is_pending">Payment pending</string>
    <string name="mec_payment_method">Payment method</string>
    <string name="mec_payment_pending">Your payment is pending</string>
    <string name="mec_payment_pending_confirmation">If the payment is confirmed you will receive a confirmation e-mail at</string>
    <string name="mec_personal_details">Personal details</string>
    <string name="mec_phone">Phone</string>
    <string name="mec_phone_error">Please enter a valid phone number</string>
    <string name="mec_phone_hint">Enter phone number</string>
    <string name="mec_postal_code">Postal code</string>
    <string name="mec_postal_code_error">Please enter a valid Zip Code</string>
    <string name="mec_postal_code_hint">Enter ZIP/Postal code</string>
    <string name="mec_privacy">Privacy Notice</string>
    <string name="mec_product_detail_title">Product details</string>
    <string name="mec_product_title">Products</string>
    <string name="mec_quantity">Quantity</string>
    <string name="mec_questions">Questions? Please visit our</string>
    <string name="mec_read">Read our</string>
    <string name="mec_read_privacy">I have read the</string>
    <string name="mec_reviews">Reviews</string>
    <string name="mec_salutation">Salutation</string>
    <string name="mec_salutation_error">Please select a salutation</string>
    <string name="mec_salutation_none">None</string>
    <string name="mec_save_and_continue">Save and continue</string>
    <string name="mec_set_shipping_address_alert_message">Do you want to set this address as the shipping address?</string>
    <string name="mec_set_text">Set</string>
    <string name="mec_shipping_address">Shipping address</string>
    <string name="mec_shipping_cost">Shipping cost</string>
    <string name="mec_shopping_cart_title">Cart</string>
    <string name="mec_specs">Specs</string>
    <string name="mec_state">State</string>
    <string name="mec_state_error">Please select a state</string>
    <string name="mec_stock_available">products left</string>
    <string name="mec_terms_conditions">Terms and Conditions</string>
    <string name="mec_thank_for_order">Thank you for your order</string>
    <string name="mec_threshold_message">This might take more time. Do you wish to continue?</string>
    <string name="mec_threshold_title">Request threshold reached</string>
    <string name="mec_time_out_error">Network timeout reached!</string>
    <string name="mec_town">Town/City</string>
    <string name="mec_town_error">Please enter a valid town</string>
    <string name="mec_town_hint">Enter your town or city</string>
    <string name="mec_track_order">Track order</string>
    <string name="mec_use_as_billing_address">Use this address as my billing address</string>
    <string name="mec_valid_until">Valid until</string>
    <string name="mec_your_order_number">Your order number is</string>
    <string name="mec_zero_results_message">This filters our product list. Please check that there are no typos in your filter term</string>
    <string name="mec_pros_plus" translatable="false">\uFF0B</string>
</resources>